# PepSift

./: README.md  setup.cfg  tox.ini
src/pepsift/: __init__.py  natural-aa.json  pepsift.py  utils.py
tests/: __init__.py  constants.py  test_pepsift.py
