[metadata]
name = pepsift
version = attr: pepsift.__version__
description = Identify peptides and derivatives from small molecule datasets
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/OlivierBeq/pepsift

author = Olivier J. M. Béquignon
author_email = "olivier.bequignon.maintainer@gmail.com"
maintainer = Olivier J. M. Béquignon
maintainer_email = "olivier.bequignon.maintainer@gmail.com"

license_files =
    LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8

keywords =
    peptides
    cheminformatics

[options]
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    rdkit
    tqdm
    click

[options.packages.find]
where = src

[options.package_data]
* = *.sp

# [options.entry_points]
# console_scripts =
#     molspotter = pepsift.cli:main

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

testing =
    pytest